--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uuid": "^9.0.0",
     "zustand": "^4.4.1"
   }
 }
